converted href to markdown

--- a/content/posts/2009/2009-11-22-chrome-os.md
+++ b/content/posts/2009/2009-11-22-chrome-os.md
@@ -17,7 +17,7 @@ tags:
 ---
 ![chrome header](/blog/images/2009/chrome-header.jpg) 
 
-Since everybody is talking about it I really wanted to experience the _**all new big thing**_ Google is preparing for us. The fine people over at <a href="http://www.techcrunch.com/2009/11/19/guide-install-google-chrome-os/" target="_blank" rel="noopener">Techcrunch </a>already prepared a nice tutorial on how to install and run a Chrome virtual machine image so I wont go on to reinvent the wheel.
+Since everybody is talking about it I really wanted to experience the _**all new big thing**_ Google is preparing for us. The fine people over at [Techcrunch ](http://www.techcrunch.com/2009/11/19/guide-install-google-chrome-os/)already prepared a nice tutorial on how to install and run a Chrome virtual machine image so I wont go on to reinvent the wheel.
 
 Let me just say that I am completely unimpressed. It's a linux kernel with a browser on top of it. Yes it boots quickly but hey it's a linux kernel with only a browser on top of it, yes it gives you access to Google services but hey it's a web browser of course it does. So basically Google has a Linux kernel and a browser which to push for embedded devices used to browse the internet. Wow :).
 
